<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.UserProfileActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginName"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" android:layout_marginEnd="52dp" android:layout_marginRight="52dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/surname"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="45dp" app:layout_constraintBottom_toTopOf="@+id/name"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="104dp" android:layout_marginLeft="44dp" android:layout_marginStart="44dp"/>
    <TextView
            android:text="@string/loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp" android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="60dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginLeft="44dp"
            android:layout_marginTop="68dp" android:layout_marginStart="44dp"/>
    <TextView
            android:text="@string/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginLeft="44dp"
            android:layout_marginTop="56dp" android:layout_marginStart="44dp"/>
    <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/edit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.529"
            android:layout_marginBottom="208dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/loginName"
            android:layout_marginRight="52dp"
            android:layout_marginEnd="52dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>