<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuActivity">

    <Button
            android:text="@string/manage_Categories"
            android:layout_width="242dp"
            android:layout_height="50dp" android:id="@+id/button"
            android:onClick="manageCategories"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.713"/>
    <Button
            android:text="@string/logout"
            android:layout_width="242dp"
            android:layout_height="50dp" android:id="@+id/button3"
            android:onClick="logOutUser"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="312dp"/>
    <Button
            android:text="@string/profile"
            android:layout_width="242dp"
            android:layout_height="50dp" android:id="@+id/button2"
            android:onClick="manageProfile"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"/>
</androidx.constraintlayout.widget.ConstraintLayout>