<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".category.AddCategoryActivity">

    <TextView
            android:text="@string/createCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView32"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            app:layout_constraintBottom_toTopOf="@+id/textView33" android:layout_marginBottom="60dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView33"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp" android:layout_marginBottom="552dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/categoryName"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintBottom_toTopOf="@+id/categoryDescription"
            android:layout_marginBottom="36dp" android:layout_marginLeft="68dp" android:layout_marginStart="68dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/categoryDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="536dp" app:layout_constraintStart_toEndOf="@+id/textView33"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"/>
    <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button7"
            android:onClick="createCategory"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="76dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>