<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/loginField"
            android:layout_marginTop="88dp" android:layout_marginLeft="112dp" android:layout_marginStart="112dp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="82dp"
            android:layout_height="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="172dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"/>
    <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="192dp" android:layout_marginLeft="112dp" android:layout_marginStart="112dp"/>
    <TextView
            android:text="@string/login"
            android:layout_width="88dp"
            android:layout_height="22dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="68dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"/>
    <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="connectToFms"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="368dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>