<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".category.SingleCategoryActivity" android:background="#FFFFFF">

    <TextView
            android:text="@string/category_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/CategoryBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"
            app:layout_constraintBottom_toTopOf="@+id/textView15" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/categoryIncomes"
            app:layout_constraintStart_toEndOf="@+id/textView15" android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            app:layout_constraintBottom_toTopOf="@+id/categoryExpenses" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/categoryExpenses"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="172dp"/>
    <TextView
            android:text="@string/expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="172dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/categoryBalance"
            app:layout_constraintBottom_toTopOf="@+id/categoryIncomes" android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintBottom_toTopOf="@+id/textView16" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/systemBalance"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintBottom_toTopOf="@+id/systemIncomes" android:layout_marginBottom="24dp"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/systemExpenses"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="136dp" android:layout_marginStart="136dp"
            app:layout_constraintBottom_toTopOf="@+id/textView12" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="@string/SystemBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="84dp" android:layout_marginStart="84dp"
            app:layout_constraintBottom_toTopOf="@+id/textView9" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/systemIncomes"
            app:layout_constraintBottom_toTopOf="@+id/systemExpenses"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"/>
    <TextView
            android:text="@string/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singleCategoryText" android:layout_marginTop="36dp"
    />
    <EditText
            android:layout_width="351dp"
            android:layout_height="130dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/singleCategoryText"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.492"/>
    <EditText
            android:layout_width="351dp"
            android:layout_height="22dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="304dp"/>
    <Button
            android:text="@string/moreOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/moreOptions"
            android:onClick="goToMoreOptions"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="44dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>